2016-06-03  Per Arne Vollan  <pvollan@apple.com>

        [Win] IndexedDB worker tests are failing.
        https://bugs.webkit.org/show_bug.cgi?id=158341

        Reviewed by Alex Christensen.

        Enable IndexedDB in workers.

        * Source/cmake/OptionsWin.cmake:

2016-05-31  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.13.1 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2016-05-28  Ryosuke Niwa  <rniwa@webkit.org>

        Autocorrection makes it hard to type "doesn't" and to type @ in email addresses
        https://bugs.webkit.org/show_bug.cgi?id=158177

        Reviewed by Darin Adler.

        Fixed manual tests for autocorrection panels and added a manual test for . Most of changes are fixing up the path to LayoutTests/editing/editing.js.

        Also wrap many steps to type in a space or delete a character inside setTimeout since autocorrection happens on a timer
        and the fact WebKit2 communicates with NSSpellChecker via IPC makes the behavior even more indeterministic.

        * ManualTests/autocorrection/autocorrection-at-mark.html: Added.
        * ManualTests/autocorrection/autocorrection-cancelled-by-ESC.html:
        * ManualTests/autocorrection/autocorrection-cancelled-by-typing-1.html:
        * ManualTests/autocorrection/autocorrection-contraction-2.html: Added.
        * ManualTests/autocorrection/autocorrection-contraction.html:
        * ManualTests/autocorrection/autocorrection-in-iframe.html:
        * ManualTests/autocorrection/close-window-when-correction-is-shown.html:
        * ManualTests/autocorrection/continue-typing-to-dismiss-reversion.html:
        * ManualTests/autocorrection/delete-to-dismiss-reversion.html:
        * ManualTests/autocorrection/delete-to-end-of-word-to-show-reversion.html:
        * ManualTests/autocorrection/dismiss-multiple-guesses.html: